--- a/assignments/a05.markdown
+++ b/assignments/a05.markdown
@@ -11,12 +11,17 @@ Using logistic regression and the StackOverflow 2018 developer survey, predict w
 
 - Only load the columns you need. Use `pandas` and load them as categorical values (since they're strings but we need numbers).
 - Use "one-hot encoding" for the input columns (and use 1/0 for the IDE column if it has your IDE of choice). The pandas `pd.get_dummies` function is good here: [https://stackoverflow.com/a/37269683](https://stackoverflow.com/a/37269683)
+- If you have a column with multiple values (joined by ';'), split that column making one-hot encoding: [https://stackoverflow.com/a/50069709](https://stackoverflow.com/a/50069709)
 - Shuffle the dataset, then split it into 80% training and 20% testing.
 - Print the % of developers who use your preferred IDE in the training and testing datasets (or don't use it, whichever number is higher). Your model must achieve better accuracy than these %'s (i.e., your model must be better than a random guess).
 - Use a single logistic regression function, predicting one output (yes/no your favorite IDE is used by that developer).
 - Report statistics for each epoch: loss, accuracy on training data, accuracy on test data.
 - Use TensorFlow for the model, like we did in class.
 - Do not write more code than necessary; i.e., do not attempt to blindly adapt existing code from the internet. Write code specific to this assignment.
+
+For example, I was able to achieve 77% accuracy on predicting whether a person uses Vim, while only 28% do use Vim and 72% do not (so random guessing would give me 72% accuracy).
+
+Note, most of the effort in this assignment is spent on data processing, not machine learning. Give yourself plenty of time to figure out how to do this. Use StackOverflow a lot, particularly searching on pandas and numpy.
 
 ## Grading
 
